[package]
name = "sample-web-app"
version = "0.1.0"
authors = ["Kazumasa Shimomura <shimomura_kazumasa@cyberagent.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
